[package]
name = "xml-rsl"
version = "0.1.1"
authors = ["XS <tonycody@qq.com>"]
license = "Apache-2.0"
description = "An XML library in pure Rust"
repository = "https://github.com/xs-fork/xml-rs"
homepage = "https://github.com/xs-fork/xml-rs"
documentation = "https://docs.rs/xml-rs/"
readme = "README.md"
keywords = ["xml", "parser", "sax", "parsing", "writer"]
categories = ["parser-implementations"]
edition = "2021"
rust-version = "1.58"
include = ["src/**", "LICENSE", "README.md"]

[lib]
name = "xml"
path = "src/lib.rs"

[[bin]]
name = "xml-analyze"
path = "src/analyze.rs"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
tag-name = "{{version}}"
tag-message = ""

[dependencies]
toml-rsl = "0.1.0"
tar-rsl = "0.1.0"
ssh2-rsl = "0.1.0"
crypto-rsl = "0.1.0"